# swiftsync

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: rust.yml
accumulator/: Cargo.toml  README.md
accumulator/examples/: utxo.rs
accumulator/src/: lib.rs
accumulator/tests/: test.rs
hintfile/: Cargo.toml  README.md
hintfile/src/: lib.rs
network/: Cargo.toml  README.md
network/src/: dns.rs  lib.rs
network/tests/: test.rs
node/: Cargo.toml  README.md  config_spec.toml  justfile
node/src/: lib.rs
p2p/: Cargo.toml  README.md
p2p/examples/: feeler.rs  update_accumulator.rs
p2p/src/: handshake.rs  lib.rs  net.rs  tokio_ext.rs  validation.rs
p2p/tests/: tests.rs
peers/: Cargo.toml
peers/src/: dns.rs  lib.rs
peers/tests/: test.rs
utxo_verifier/: Cargo.toml  README.md  utxo_to_sqlite.py
utxo_verifier/src/: hasher.rs  headers.rs  job.rs  loader.rs  main.rs  worker.rs
