[package]
name = "accumulator"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", default-features = false, rev = "2b07f59545de16b66b3bf8ee988757c2d0c14afb" } 

[dev-dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", default-features = true, rev = "2b07f59545de16b66b3bf8ee988757c2d0c14afb" }
rusqlite = { version = "0.36.0", features = ["bundled"] }

[[example]]
name = "utxo"
