[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, optional = true, features = [
    "io-util",
    "net",
]}

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }

[features]
default = []
tokio = ["dep:tokio"]
