[package]
name = "node"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
accumulator = { path = "../accumulator/" }
bitcoin = { workspace = true }
kernel = { workspace = true }
hintfile = { path = "../hintfile/" }
network = { path = "../network/" }
p2p = { workspace = true }

configure_me = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
configure_me_codegen = "0.4.0"

[package.metadata.configure_me]
spec = "config_spec.toml"

[[bin]]
name = "ibd"
