[package]
name = "swiftsync-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", default-features = true, rev = "2b07f59545de16b66b3bf8ee988757c2d0c14afb" }
tokio = { version = "1", default-features = false, optional = true, features = [
    "sync",
    "io-util",
    "time",
    "net",
]}

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

accumulator = { path = "../accumulator/" }
peers = { path = "../peers/", default-features = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[[example]]
name = "update_accumulator"

[[example]]
name = "feeler"
