[package]
name = "swiftsync-p2p"
authors = ["Rob <rob@2140.dev>"]
version = "0.1.0"
description = "Bitcoin peer-to-peer connection tools"
edition = "2021"
keywords = ["bitcoin", "cryptography", "network", "peer-to-peer"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.75.0"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", default-features = true, rev = "2bb9bb6bc99ba07ed3d543a512ec3d2a9462770d" }
p2p = { package = "bitcoin-p2p-messages",  git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "2bb9bb6bc99ba07ed3d543a512ec3d2a9462770d" }
tokio = { version = "1", default-features = false, optional = true, features = [
    "sync",
    "io-util",
    "time",
    "net",
]}

[dev-dependencies]
corepc-node = { version = "0.8.0", default-features = false, features = [
    "29_0", "download"
] }
tokio = { version = "1", default-features = false, features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

accumulator = { path = "../accumulator/" }
peers = { path = "../peers/", default-features = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[[example]]
name = "update_accumulator"

[[example]]
name = "feeler"
