[package]
name = "swiftsync-p2p"
authors = ["Rob <rob@2140.dev>"]
version = "0.1.0"
description = "Bitcoin peer-to-peer connection tools"
edition = "2021"
keywords = ["bitcoin", "cryptography", "network", "peer-to-peer"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.75.0"

[dependencies]
bitcoin = { workspace = true, features = ["rand-std"] }
p2p = { package = "bitcoin-p2p-messages",  git = "https://github.com/rustaceanrob/rust-bitcoin", rev = "9f201781d9110be98757dc1c6782bc91c8a2c501" }

[dev-dependencies]
corepc-node = { version = "0.8.0", default-features = false, features = [
    "29_0", "download"
] }
tracing = "0.1"
tracing-subscriber = "0.3"

accumulator = { path = "../accumulator/" }
peers = { path = "../peers/", default-features = true }

[[example]]
name = "feeler"
