[package]
name = "peers"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", default-features = true, rev = "2b07f59545de16b66b3bf8ee988757c2d0c14afb" } 
tokio = { version = "1", default-features = false, optional = true, features = [
    "io-util",
    "net",
]}

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
