[package]
name = "peers"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", default-features = true, rev = "2bb9bb6bc99ba07ed3d543a512ec3d2a9462770d" } 
tokio = { version = "1", default-features = false, optional = true, features = [
    "io-util",
    "net",
]}

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
