[package]
name = "peers"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { workspace = true, features = ["rand-std"] } 
tokio = { version = "1", default-features = false, optional = true, features = [
    "io-util",
    "net",
]}

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }

[features]
default = []
tokio = ["dep:tokio"]
