[package]
name = "utxo_verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
accumulator = { path = "../accumulator/" }
bitcoin = { workspace = true, features = ["rand-std"] }
peers = { path = "../peers/", default-features = false }
p2p = { path = "../p2p/", package = "swiftsync-p2p", default-features = false }
p2p-messages = { package = "bitcoin-p2p-messages",  git = "https://github.com/rustaceanrob/rust-bitcoin", rev = "9f201781d9110be98757dc1c6782bc91c8a2c501" }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.36.0", features = ["bundled"] }
